test_regress/t/t_enum_huge_methods_bad.out
%Error: t/t_enum_huge_methods_bad.v:13:14: Value too wide for 64-bits expected in this context 160'h12344567abcd12344567abcd
   13 |     ELARGE = 160'h1234_4567_abcd_1234_4567_abcd
      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_enum_huge_methods_bad.v:28:16: Unsupported: enum next/prev/name method on enum with > 64 bits
   28 |       $display(e.name);
      |                ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
